If applied, this commit will fix latency api controller initialization.